--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title>Gautham is a bad boy</title>
 </head>
 <body>
 <h1>Gautham Saai is a very very bad boy</h1>
