--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Gautham is a bad boy</title>
+	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Gautham Saai is a very very bad boy</h1>
+<h1>Hello Coursera! It's a great day!</h1>
 </body>
 </html>
